# cmake-template

./: README.md
clangd/: .clangd.txt  CMakeLists.txt  clangd.code-workspace  main.cpp
clangd/.cache/clangd/index/: head1.h.F5FA54F630B8B1B2.idx  main.cpp.1DD09902CD8E2191.idx
clangd/include/: fmt_hello.h  head1.h
cmake_source_group/: CMakeLists.txt
cmake_source_group/cmake/: printfiles.cmake
cmake_source_group/include/: CMakeLists.txt  my_header.h
cmake_source_group/src/: CMakeLists.txt  main.cpp
cmakecudaTemplate/: CMakeLists.txt  main.cu
cmakeheaderonly/: .gitignore  CMakeLists.txt  main.cpp
cmakeheaderonly/wrapper/: CMakeLists.txt
cmakeheaderonly/wrapper/headeronly/: CMakeLists.txt  header.h
cmakeheaderonly/wrapper/lib/: CMakeLists.txt  lib.cpp  lib.h
cmakemultiproject/: CMakeLists.txt
cmakemultiproject/example/example1/: CMakeLists.txt  main.cpp
cmakemultiproject/example/example2/: CMakeLists.txt  main.cpp
cmakemultiproject/include/header/: CMakeLists.txt
cppcmakeTemplate/: main.cpp
cppcmakeTemplate/include/: printHello.h
cppcmakeTemplate/src/: print_hello.cpp
cppexception/: CMakeLists.txt  ex1.h  main.cpp
cppmultitheard/: vscode官方配置说明.txt
cppmultitheard/cppmulti/chapter3/: mutex_test.cpp
cppmultitheard/theardtest/: helloworld.cpp  helloworld.ilk  thread.cpp
cppmultitheard/xiaopeng/: async_test.cpp  视频地址.txt
cppmultitheard/xiaopeng/MTvector/: MTVector.cpp
cpptemplate/: src.cpp  src.ilk  tasks.json  test.cpp  test.h
cppvcpkgtemplate/: CMakeLists.txt  main.cpp  save.txt
cppvcpkgtemplate/include/: fmt_hello.h
cuda+cpp/: main.cpp
cuda+cpp+clangd Template/: .clangd  CMakeLists.txt  kernel.cu  main.cpp
cuda+cpp/backup/: CMakeLists.txt
moditfy_root_dir/: CMakeLists.txt  main.cpp
nanovdb+cuda+cpp/: CMakeLists.txt  cuda+cpp.code-workspace  hello.cu
ninja+cmake/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
vcpkg manifest/: CMakeLists.txt  main.cpp
